# source-code

./: .dockerignore  .gitignore  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  install.sh
bench/: README.md  ablate.py  bfcl.py  compare.py  graders.py  matrix.py  mcp_stub.py  run.py
crates/agentd/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
crates/agentd-cli/: Cargo.toml
crates/agentd-cli/src/: main.rs
crates/agentd-cli/tests/: aauth_e2e.rs  aauth_enroll_assertion_e2e.rs  aauth_flow_e2e.rs  aauth_intel_sign_e2e.rs  chaos_e2e.rs  mcp_oauth.rs  orchestrator_spawn.rs  otel_e2e.rs  reactive_e2e.rs  serve_https.rs  serve_mcp.rs  subagent_spawn.rs  warm_session.rs
crates/agentd-cli/tests/common/: mod.rs
crates/agentd-conformance/: Cargo.toml  README.md
crates/agentd-conformance/benches/: engine.rs
crates/agentd-conformance/corpus/conformance/: compose-map.toml  control-condition.toml  control-fail.toml  control-merge-terminate.toml  control-respond.toml  data-diff.toml  data-pipeline.toml  io-read-env.toml  llm-route.toml  reliability-robust.toml
crates/agentd-conformance/corpus/faults/: intel-backend-down.toml  malformed-llm-output.toml  schema-drift-deadends.toml
crates/agentd-conformance/corpus/security/: injection-http-exfil.toml  injection-path-escape.toml
crates/agentd-conformance/fixtures/: map-child.toml
crates/agentd-conformance/src/: capability.rs  harness.rs  lib.rs  main.rs  mcp_http_server.rs  report.rs  scenario.rs
crates/agentd-conformance/src/checks/: agent_loop.rs  mcp_client.rs  mcp_server.rs  mod.rs  security.rs  supervisor.rs  work_claim.rs
crates/agentd-conformance/tests/: conformance.rs  corpus.rs  cost.rs  reliability.rs  security.rs
crates/agentd/examples/: custom-cli.rs  embedded-agent.rs
crates/agentd/src/: agentd_uri.rs  budget.rs  capabilities.rs  cel.rs  config.rs  config_file.rs  config_watch.rs  embedded.rs  error.rs  exit.rs  identity.rs  lib.rs  main.rs  policy.rs  ratelimit.rs  report.rs  runtime.rs  server_config.rs  signals.rs  tools.rs
crates/agentd/src/aauth/: apd.rs  b64.rs  discover.rs  key.rs  mod.rs  ps.rs  sig.rs
crates/agentd/src/agent/: catalog.rs  instructions.rs  loop_node.rs  mod.rs  planner.rs  review.rs
crates/agentd/src/agentloop/: action.rs  context.rs  mod.rs  runner.rs  stop.rs
crates/agentd/src/auth/: basic.rs  bearer.rs  config.rs  hmac.rs  mod.rs  mtls.rs  oidc.rs
crates/agentd/src/cluster/: claim.rs  mod.rs  shard.rs
crates/agentd/src/engine/: checkpoint.rs  context.rs  handler.rs  mod.rs  outcome.rs  record.rs  runner.rs  template.rs
crates/agentd/src/graph/: driver.rs  exec.rs  mod.rs  sha.rs
crates/agentd/src/intel/: anthropic.rs  client.rs  discovery.rs  endpoints.rs  failover.rs  health.rs  mock.rs  mod.rs  openai.rs
crates/agentd/src/intelligence/: backends.rs  client.rs  handler.rs  mod.rs  protocol.rs  providers.rs
crates/agentd/src/json/: frame.rs  mod.rs
crates/agentd/src/mcp/: a2a.rs  a2a_client.rs  allowlist.rs  auth.rs  client.rs  config.rs  handler.rs  http.rs  mock.rs  mock_http.rs  mod.rs  oauth.rs  protocol.rs  registry.rs  server.rs
crates/agentd/src/net/: http.rs  mod.rs  ssrf.rs  tls.rs  unixsock.rs  vsock.rs
crates/agentd/src/obs/: health.rs  log.rs  metrics.rs  mod.rs  otel.rs  serve.rs  trace.rs
crates/agentd/src/observability/: audit.rs  metrics.rs  mod.rs  otel.rs  traceparent.rs
crates/agentd/src/sec/: exec.rs  mod.rs  scope.rs  secret.rs  secrets.rs
crates/agentd/src/secrets/: mod.rs  oauth2.rs
crates/agentd/src/signing/: mod.rs
crates/agentd/src/subagent/: control.rs  mod.rs  orchestrator.rs  protocol.rs
crates/agentd/src/supervisor/: budget.rs  cgroup.rs  gate.rs  kill.rs  liveness.rs  mod.rs  reactor.rs  reap.rs  reaper.rs  restart.rs  spawn.rs  swap.rs  tree.rs
crates/agentd/src/testing/: fixture.rs  mod.rs  runner.rs
crates/agentd/src/tools/: data.rs  env.rs  fs.rs  http.rs  mod.rs  policy.rs  shell.rs
crates/agentd/src/triggers/: cron.rs  fs_watch.rs  http.rs  http_tls.rs  mod.rs  mode.rs  router.rs  timer.rs  warm.rs
crates/agentd/src/wire/: intel.rs  mcp.rs  mod.rs
crates/agentd/src/workflow/: mod.rs  model.rs  validator.rs
crates/agentd/tests/: build_time_validation.rs  cgroup_e2e.rs  chaos_e2e.rs  cli_once.rs  cli_smoke.rs  daemon_modes.rs  fixture_suite.rs  mcp_http.rs  observe_e2e.rs  orchestrator_spawn.rs  otel_e2e.rs  reactive_e2e.rs  reload_e2e.rs  serve_https.rs  serve_mcp.rs  subagent_spawn.rs  tracing_smoke.rs  warm_session.rs  workflow_e2e.rs
crates/agentd/tests/common/: mod.rs
crates/agentd/tests/fixtures/intel_classify/: fixture.toml  workflow.toml
crates/agentd/tests/fixtures/linear/: fixture.toml  workflow.toml
crates/agentd/tests/fixtures/switch_branch/: fixture.toml  workflow.toml
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  http.rs  http_server.rs  lib.rs  modern.rs  server.rs  version.rs  wire.rs
crates/mcp/src/rpc/: frame.rs  mod.rs
crates/net/: Cargo.toml
crates/net/src/: http.rs  lib.rs  tls.rs  unixsock.rs  vsock.rs
crates/net/tests/: tls_server.rs
crates/net/tests/fixtures/: README.md  ca.key  ca.pem  ca2.key  ca2.pem  client.key  client.pem  server.key  server.pem  server2.key  server2.pem
docs/: CONFORMANCE.md  README.md  ROADMAP.md  SAMPLES.md  aauth.md  architecture.md  capabilities.md  configuration.md  deployment.md  embedding.md  getting-started.md  intelligence.md  maturity.md  mcp.md  modes-and-triggers.md  observability.md  operations.md  quickstart.md  run-graphs.md  scaling.md  security.md  subagents.md  use-cases.md  workflows.md
examples/: README.md  SAMPLES.md  agent-loop.toml  approval-gate.toml  cron-poller.toml  evaluator-optimizer.toml  hello.toml  llm-classifier.toml  map-fanout.toml  mcp-servers.json  multi-provider.toml  parallel-fanout.toml  run-loop.sh  run-once.sh  run-reactive.sh  self-planning-agent.toml  subworkflow-child.toml  subworkflow-parent.toml  systemd-agent.service  systemd-agentd.service  webhook-receiver.toml
packaging/: README.md
(+137 files in other folders)
