# agentd workspace.
#
# `crates/agentd` is the runtime — a single binary that is CLI, daemon, and
# subagent re-exec in one. `crates/agentd-conformance` is the black-box
# conformance suite: it drives the real binary (MCP client/server, supervisor,
# the ReAct loop) and asserts each contract, never linking the agentd library.
[workspace]
resolver = "3"
members = ["crates/agentd", "crates/agentd-conformance"]

# Release profile for a distributable single binary: size-optimized, LTO'd,
# stripped, abort-on-panic. A panic is a bug, not a recoverable state — the
# supervisor's job is to keep the *tree* healthy, and a panicking supervisor
# should die loudly (its children are collapsed by PR_SET_PDEATHSIG; see
# rfcs/0003) rather than limp on with corrupt state.
[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
