[package]
name = "agentd-conformance"
version = "1.1.0"
edition = "2024"
rust-version = "1.88"
description = "Conformance, reliability, and benchmark suite for the agentd runtime"
license = "MIT"
repository = "https://github.com/agentd-dev/source-code"
publish = false

[lib]
name = "agentd_conformance"
path = "src/lib.rs"

[[bin]]
name = "agentd-conformance"
path = "src/main.rs"

[dependencies]
# The runtime under test. `tools-http` is enabled so the corpus can
# exercise the http_request node (the exfil-denial scenario). We do NOT
# pull tools-shell / tools-mcp: workspace feature unification would then
# run agentd's Unix-only shell tests under `cargo test --workspace` on
# macOS / Windows, where they don't apply. Those families are exercised
# by the agentd feature-matrix job instead.
agentd = { path = "../agentd", features = ["tools-http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "engine"
harness = false
