# agentd conformance suite.
#
# A BLACK-BOX validator of the agentd runtime: it knows agentd only as a binary
# plus the MCP / JSON-RPC 2.0 spec, never linking the agentd library — so it can
# catch real protocol/behaviour regressions instead of agreeing with the
# implementation's own types. It drives the real binary (served self-MCP, the
# backing-MCP client, the supervisor, the ReAct loop) and asserts each contract.
#
# Run it two ways:
#   cargo test -p agentd-conformance      # every check as a #[test]
#   cargo run  -p agentd-conformance      # the same checks → a PASS/FAIL report
[package]
name = "agentd-conformance"
version = "2.9.0"
edition = "2024"
rust-version = "1.88"
description = "Black-box conformance suite for the agentd runtime (MCP client/server + supervisor + agent loop)"
license = "MIT"
publish = false
# `cargo run -p agentd-conformance` → the report runner (not the confmcp helper).
default-run = "agentd-conformance"

[lib]
name = "agentd_conformance"
path = "src/lib.rs"

[[bin]]
name = "agentd-conformance"
path = "src/main.rs"

# A minimal recording MCP reference server, used by the MCP-client conformance
# family to capture exactly what agentd sends a backing server.
[[bin]]
name = "confmcp"
path = "src/bin/confmcp.rs"

# A mock work-claim coordination server (the frozen work.* contract, RFC 0015
# §5.6) with atomic single-grant lease semantics, used by the work-claim
# conformance family to test the cross-instance claim convention end-to-end.
[[bin]]
name = "workmcp"
path = "src/bin/workmcp.rs"

[dependencies]
serde_json = "1"
# Only for SIGTERM (graceful daemon drain) + reaping in the harness.
libc = "0.2"
