[package]
name = "agentd"
version = "2.8.1"
edition = "2024"
rust-version = "1.88"
description = "Minimal, MCP-native, reactive agent runtime (rfcs/0001-mcp-native-agent-runtime.md)"
license = "MIT"
repository = "https://github.com/agentd-dev/source-code"
publish = false

[lib]
name = "agentd"
path = "src/lib.rs"

[[bin]]
name = "agentd"
path = "src/main.rs"

# Capability surface is compile-time. The default build is the minimalism
# target: no async runtime, no TLS, no C/C++ toolchain — single-digit
# first-party crates. Everything heavier is feature-gated and OFF by
# default. See rfcs/0002 §dependency-budget.
[features]
default = []
# Direct https:// intelligence/MCP when TLS is not sidecar-terminated.
# rustls with the `ring` provider (no cmake/C build dep) + bundled roots.
tls = ["dep:rustls", "dep:webpki-roots"]
# Enclave / microVM intelligence transport (AF_VSOCK).
vsock = ["dep:vsock"]
# Served self-MCP over a unix socket. Blocking UnixListener, thread-per-conn
# (RFC 0005 §3.6) — no dep. (mio/epoll is a future high-fan-in optimisation.)
serve-mcp = []
# A2A (Agent2Agent) v1.0 unary method surface over the served self-MCP listener
# (RFC 0020). A thin binding — a Task IS a served run — over the existing RFC 0004
# JSON-RPC codec + the vsock/unix management transport; no dep. Rides serve-mcp.
a2a = ["serve-mcp"]
# Optional cron-expression scheduling (internal time event source).
# Hand-rolled 5-field UTC parser — no dep (the minimalism moat, rfcs/0002).
cron = []
# The agentd://events live-event resource (RFC 0016 §7): a bounded in-memory
# ring of the RFC 0010 §3.2 JSON lines, served over the self-MCP with the RFC
# 0005 notify-then-read cursor. Rides serve-mcp (it's a served resource); no dep
# — reuses the existing serde_json serializer + the served listener.
events = ["serve-mcp"]
# Horizontal scaling (RFC 0019): `--shard K/N` partitioning + the autoscaling
# signal set + the agentd://capacity read surface. Dependency-free — the shard
# predicate is a hand-rolled FNV-1a (no hashbrown/siphash/sha2), pure CPU; the
# capacity resource rides serve-mcp (gated like events/intelligence). Also the
# work-claim/lease cross-instance ownership (RFC 0015 §5.6 work.* contract; spawn-
# AND continue-claim) + standby (a claim-pull assignment channel). The only
# deferred bits: the claim.style=resource CAS path (a documented stub) and a
# standby warm-child pool.
cluster = []
# Hand-written Prometheus text on the opt-in HTTP/socket surface (no dep).
metrics = []
# Restart-free reconfiguration (RFC 0017 §5): a SIGHUP-triggered, validate-first,
# quiesce-and-reapply hot reload of the reloadable config subset (model/limits/
# log_level/subscribe/mcp_servers), gated at a reactive quiesce boundary.
# Dependency-free — raw `libc::sigaction` + the existing self-pipe (no
# signal-hook), reusing the one `Config::load` validation pipeline. SIGHUP keeps
# its default disposition when this feature is OFF. `mcp_servers` is RELOADABLE
# (RFC 0017 §5.1/§5.3 step 4): a validated reload re-handshakes the MCP server set
# live — removed servers stop+reap via the stdio shutdown ladder, added servers
# spawn+handshake+subscribe (read-after-subscribe), changed servers remove-then-
# add. The supervisor's name-keyed `servers`/`owner`/claim wiring makes the live
# re-handshake safe (a remove/add never shifts another server's identity).
hot-reload = []
# The inotify file-watch reload trigger (RFC 0017 §5.2): a `--watch-config`-armed
# raw `inotify` watch on the config file's PARENT DIRECTORY that sets the SAME
# RELOAD latch SIGHUP does, so a Kubernetes ConfigMap volume swap (an atomic
# directory-symlink rename) reloads with no signal plumbing. Implies `hot-reload`
# — the watch is useless without the reload routine it funnels into. Off by
# default (SIGHUP is the portable, dependency-free default). Dependency-free: raw
# `libc` inotify syscalls (no `notify`/`inotify` crate — the minimalism moat).
config-watch = ["hot-reload"]
# OTLP span export + GenAI semconv. Hand-rolled OTLP-over-HTTP/JSON over the
# existing HTTP client + serde_json — no opentelemetry/protobuf deps, so
# `--features otel` stays dependency-free (3 deps).
otel = []
# Built-in mock intelligence + mock MCP server (the hidden `--internal-mock-llm`
# / `--internal-mock-mcp` re-exec modes) that the test + conformance suites drive.
# Test scaffolding, never a shippable capability — so it's OFF in release and the
# production binary carries none of it. Debug builds enable it automatically (the
# `debug_assertions` cfg on the modules), so `cargo test` and the conformance
# harness need no extra flag; an explicit `--release` test build can opt in here.
internal-mocks = []

[dependencies]
# The one non-negotiable dependency: JSON is the MCP + LLM wire format.
# Keep all wire types in one module (json/, wire/) so a swap to miniserde
# stays mechanical (rfcs/0002).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- feature: tls ---
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12", "logging"], optional = true }
webpki-roots = { version = "0.26", optional = true }
# --- feature: vsock ---
vsock = { version = "0.5", optional = true }
# --- feature: serve-mcp --- blocking std UnixListener; no dependency.
# --- feature: cron --- hand-rolled in triggers/timer.rs; no dependency.

# Unix-only: signals (sigaction), process control (setpgid/killpg/waitpid),
# prctl (PR_SET_CHILD_SUBREAPER / PR_SET_PDEATHSIG), setrlimit. Raw libc —
# no signal-hook, no nix in the default build (rfcs/0002, rfcs/0003).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# Unix-only test helper: send SIGTERM to a spawned agentd to exercise the
# graceful-drain → exit-0 contract for the long-lived (loop/schedule/reactive)
# modes. `libc` is already a runtime dependency on Unix; this adds no new crate.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
