[package]
name = "agentd"
version = "2.1.0"
edition = "2024"
rust-version = "1.88"
description = "Minimal, MCP-native, reactive agent runtime (rfcs/0001-mcp-native-agent-runtime.md)"
license = "Apache-2.0"
repository = "https://github.com/agentd-dev/source-code"
publish = false

[lib]
name = "agentd"
path = "src/lib.rs"

[[bin]]
name = "agentd"
path = "src/main.rs"

# Capability surface is compile-time. The default build stays lean — no async
# runtime, no C/C++ toolchain, single-digit first-party crates — but as of v2.0.0
# HTTPS is the primary transport for both intelligence and MCP, so `tls` is ON by
# default (pure-Rust rustls+ring, no cmake/C build dep). Everything else heavier is
# feature-gated and OFF by default. See rfcs/0002 §dependency-budget.
[features]
default = ["tls"]
# Direct https:// intelligence/MCP (the default transport). rustls with the `ring`
# provider (no cmake/C build dep) + bundled webpki roots — so a scratch container
# has trust anchors with no system CA bundle. On by default; opt out with
# `--no-default-features` to reach https only via a TLS-terminating sidecar.
tls = ["net/tls", "mcp/tls"]
# Served self-MCP: the request/dispatch machinery (ServeCtx, the domain handler,
# the a2a surface) — no dep. The only transport is HTTP(S) (`serve-https`); this
# base carries the served ctx/handler the transport plugs into.
serve-mcp = []
# Served self-MCP over HTTP(S) — the target-vision control-plane transport (pivot
# Phase 2): Streamable HTTP + SSE via `mcp::http_server`, with mTLS/bearer auth.
# Rides serve-mcp (the served ctx/handler) + tls (the acceptor). Plaintext http://
# serving is loopback-only (dev/tests).
serve-https = ["serve-mcp", "tls", "mcp/tls", "net/tls"]
# A2A (Agent2Agent) v1.0 method surface over the served self-MCP (RFC 0020). A thin
# binding — a Task IS a served run — over the RFC 0004 JSON-RPC codec + the HTTP(S)
# transport; no dep. Rides serve-https: post-pivot the HTTP(S) listener is the ONLY
# transport, so an a2a build without it would compile an unreachable surface.
a2a = ["serve-https"]
# Optional cron-expression scheduling (internal time event source).
# Hand-rolled 5-field UTC parser — no dep (the minimalism moat, rfcs/0002).
cron = []
# OAuth 2.1 client-credentials (M2M) auth for remote intelligence/MCP endpoints
# (RFC 0006 §auth): fetch+cache a bearer token from a token endpoint, refresh on
# expiry. Dependency-free — reuses the hand-rolled HTTP client + serde_json + the
# sec::secret resolver; the form encoder is hand-rolled (no url/form_urlencoded
# crate). Rides `tls` for an https token endpoint (the common case).
oauth = []
# The agent://events live-event resource (RFC 0016 §7): a bounded in-memory
# ring of the RFC 0010 §3.2 JSON lines, served over the self-MCP with the RFC
# 0005 notify-then-read cursor. Rides serve-mcp (it's a served resource); no dep
# — reuses the existing serde_json serializer + the served listener.
events = ["serve-https"]
# Horizontal scaling (RFC 0019): `--shard K/N` partitioning + the autoscaling
# signal set + the agent://capacity read surface. Dependency-free — the shard
# predicate is a hand-rolled FNV-1a (no hashbrown/siphash/sha2), pure CPU; the
# capacity resource rides serve-mcp (gated like events/intelligence). Also the
# work-claim/lease cross-instance ownership (RFC 0015 §5.6 work.* contract; spawn-
# AND continue-claim) + standby (a claim-pull assignment channel). The only
# deferred bits: the claim.style=resource CAS path (a documented stub) and a
# standby warm-child pool.
cluster = []
# Hand-written Prometheus text on the opt-in HTTP/socket surface (no dep).
metrics = []
# Restart-free reconfiguration (RFC 0017 §5): a SIGHUP-triggered, validate-first,
# quiesce-and-reapply hot reload of the reloadable config subset (model/limits/
# log_level/subscribe/mcp_servers), gated at a reactive quiesce boundary.
# Dependency-free — raw `libc::sigaction` + the existing self-pipe (no
# signal-hook), reusing the one `Config::load` validation pipeline. SIGHUP keeps
# its default disposition when this feature is OFF. `mcp_servers` is RELOADABLE
# (RFC 0017 §5.1/§5.3 step 4): a validated reload re-handshakes the MCP server set
# live — removed servers stop+reap via the stdio shutdown ladder, added servers
# spawn+handshake+subscribe (read-after-subscribe), changed servers remove-then-
# add. The supervisor's name-keyed `servers`/`owner`/claim wiring makes the live
# re-handshake safe (a remove/add never shifts another server's identity).
hot-reload = []
# The inotify file-watch reload trigger (RFC 0017 §5.2): a `--watch-config`-armed
# raw `inotify` watch on the config file's PARENT DIRECTORY that sets the SAME
# RELOAD latch SIGHUP does, so a Kubernetes ConfigMap volume swap (an atomic
# directory-symlink rename) reloads with no signal plumbing. Implies `hot-reload`
# — the watch is useless without the reload routine it funnels into. Off by
# default (SIGHUP is the portable, dependency-free default). Dependency-free: raw
# `libc` inotify syscalls (no `notify`/`inotify` crate — the minimalism moat).
config-watch = ["hot-reload"]
# OTLP span export + GenAI semconv. Hand-rolled OTLP-over-HTTP/JSON over the
# existing HTTP client + serde_json — no opentelemetry/protobuf deps, so
# `--features otel` stays dependency-free (3 deps).
otel = []
# Agent-authored cyclic workflows (pivot Phase 7): a serde-only graph the model
# self-authors (workflow.define/run/patch self-tools) or the operator pins
# (--mode workflow --workflow <file>), driven by a thin walker reusing the ReAct
# `Session`/`Budget`/`Router` — nodes Agent/Tool/Branch/Wait/Subgraph/Halt, a
# blackboard, two-tier conditions (json-pointer preds + one semantic branch), and
# four-layer cycle termination with distinct graph statuses. Dependency-free (serde
# + serde_json::Value::pointer only — the minimalism moat). Default OFF: an absent
# build is byte-for-byte today; the degenerate single-Agent-node workflow reproduces
# today's behaviour. The ENGINE is transport-free (self-tools + the driver need no
# listener); the `agent://workflow` served resource lights up only when a serving
# feature is also built (its read arm lives behind `serve-mcp`).
workflow = []
# Built-in mock intelligence + mock MCP server (the hidden `--internal-mock-llm`
# / `--internal-mock-mcp` re-exec modes) that the test + conformance suites drive.
# Test scaffolding, never a shippable capability — so it's OFF in release and the
# production binary carries none of it. Debug builds enable it automatically (the
# `debug_assertions` cfg on the modules), so `cargo test` and the conformance
# harness need no extra flag; an explicit `--release` test build can opt in here.
internal-mocks = []
# CEL (Common Expression Language) for workflows: `{"op":"cel"}` predicates,
# computed `assign.expr`, `infer.check` value constraints, and reactive `cel`
# wake conditions — hermetic, non-Turing-complete, terminating expressions the
# model can safely author. THE one gated exception to the zero-dep moat: the
# default build carries none of it; a non-cel build REJECTS graphs using CEL at
# define time (fail-closed, clear message). Rides `workflow`.
cel = ["dep:cel-interpreter"]

[dependencies]
cel-interpreter = { version = "0.10.0", optional = true, features = ["json"] }
# The reusable MCP base library (workspace crate): wire types + the version/era
# model + the modern dialect helpers + the JSON-RPC codec. In-tree.
mcp = { path = "../mcp" }
# Shared transport primitives (workspace crate): the HTTP/1.1+SSE client, unix +
# feature-gated tls/vsock connects, SSRF guard. Owns the rustls/webpki deps
# (agentd's `tls` feature maps to `net/tls`).
net = { path = "../net" }
# The one non-negotiable dependency: JSON is the MCP + LLM wire format.
# Keep all wire types in one module (json/, wire/) so a swap to miniserde
# stays mechanical (rfcs/0002).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The reusable `net`/`mcp` crates keep their `vsock` features (agentd no longer
# enables them — the pivot removed agentd's unix/vsock use). No direct `vsock` dep.
# --- feature: cron --- hand-rolled in triggers/timer.rs; no dependency.

# Unix-only: signals (sigaction), process control (setpgid/killpg/waitpid),
# prctl (PR_SET_CHILD_SUBREAPER / PR_SET_PDEATHSIG), setrlimit. Raw libc —
# no signal-hook, no nix in the default build (rfcs/0002, rfcs/0003).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

# Unix-only test helper: send SIGTERM to a spawned agent to exercise the
# graceful-drain → exit-0 contract for the long-lived (loop/schedule/reactive)
# modes. `libc` is already a runtime dependency on Unix; this adds no new crate.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
