# The reusable Model Context Protocol base library: wire types + the version/era
# model + (progressively) the transport dialects, client, and server that agentd's
# runtime builds on. Deliberately free of agentd internals so it can be reused and
# so the multi-version (legacy handshake ↔ modern stateless) logic lives in one
# place. Dependency budget mirrors agentd: serde + serde_json only.
[package]
name = "agentd-mcp"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
description = "Model Context Protocol base library: wire types, version/era negotiation, transports"
license = "Apache-2.0"
repository = "https://github.com/agentd-dev/source-code"
keywords = ["mcp", "json-rpc", "agent", "llm", "protocol"]
categories = ["network-programming", "api-bindings"]

[lib]
name = "mcp"
path = "src/lib.rs"

[features]
default = []
# Direct https:// MCP (TCP+TLS) + mutual-TLS client identities — maps to net/tls.
tls = ["net/tls"]
# AF_VSOCK MCP transport — maps to net/vsock for the client (outbound connect) and
# pulls the `vsock` crate directly for the server's inbound `VsockListener`.
vsock = ["net/vsock", "dep:vsock"]

[dependencies]
# Shared transport primitives (the HTTP/1.1+SSE client, unix/tls/vsock connects).
net = { package = "agentd-net", path = "../net", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The served-MCP vsock listener (`server::ServeStream::Vsock`). The client's vsock
# *connect* lives in `net`; the server *listens*, so it needs `VsockListener` here.
vsock = { version = "0.5", optional = true }
